# analyst-agent

./: .gitignore  README.md  broker_wechat_matrix.md  pyproject.toml
core/: config.py
data/: a_share_companies_sample.csv  analyst-list-acceptance-candidates.md  analyst-list-full-2026w24.md  analyst-list-production-gold-2026w24.md  analyst-list-production-sample.md  analyst-list.md  industry_terms_sample.csv  source_whitelist.yaml
docs/: db_schema.sql  gold_candidate_articles_2026w24.md  ir_search_integration_status.md  manual_wechat_real_samples.md  mvp_acceptance_expansion.md  production_smoke_2026w24.md  source_list_review_latest.json  stance_schema.md  wechat_source_lessons_2026w24.md  wewe_login_runbook.md
mcp/: analyst_views_server.py
scripts/: _env_utils.py  aggregate_cross_section.py  audit_manual_wechat_gap.py  check_extract_accuracy.py  check_mvp_acceptance.py  check_phase2_readiness.py  check_phase3_readiness.py  check_sources.py  check_wechat_providers.py  diagnostic_io.py  ensure_wechat_dual_source_accounts.py  export_agent_handoff.py  export_full_text_recovery_report.py  export_history_readiness.py  export_project_package.py  export_visual_pack.py  generate_weekly_brief.py  import_manual_wechat_article.py  ingest_sqlite.py  prepare_wewe_login.py  probe_wechat_opencli.py  query_agent_interface.py  review_source_list_before_search.py  run_coverage_check.py  run_extract_mvp.py  run_mvp_pipeline.py  run_phase1_manual_check.py  scaffold_manual_wechat_templates.py  sync_broker_wechat_matrix.py  validate_manual_wechat_articles.py
tests/: test_config.py  (+26 more)
(+36 files in other folders)
